--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "license": "0BSD",
-  "main": "index.js",
+  "name": "slip-gaji-master",
+  "version": "2.0.1",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.33",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "@expo/vector-icons": "^15.0.3",
-    "react-native-screens": "~4.16.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "react-native-safe-area-context": "~5.6.0",
-    "@react-native-async-storage/async-storage": "2.2.0"
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.0",
+    "@react-navigation/native": "^6.1.0",
+    "expo": "~51.0.0",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.x",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
