--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Slip Gaji Master",
-    "slug": "slip-gaji-app",
+    "slug": "slipgaji",
     "version": "2.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,13 +21,11 @@
       },
       "package": "com.komputerwh2.slipgajiapp"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "extra": {
       "eas": {
         "projectId": "4c82d3af-5bdc-42ad-b071-bb0110a702a5"
       }
-    }
+    },
+    "sdkVersion": "51.0.0"
   }
 }
