--- a/eas.json
+++ b/eas.json
@@ -1,4 +1,8 @@
 {
+  "cli": {
+    "version": ">= 5.9.1",
+    "appVersionSource": "remote"
+  },
   "build": {
     "development": {
       "developmentClient": true,
