--- a/eas.json
+++ b/eas.json
@@ -4,15 +4,15 @@
     "appVersionSource": "remote"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
+    "production": {
+      "android": {
+        "buildType": "apk"
+      }
     },
     "preview": {
       "android": {
         "buildType": "apk"
       }
-    },
-    "production": {}
+    }
   }
 }
